# CCOS-disk-utils

./: .clang-format  .gitignore  CMakeLists.txt  FS.adoc  Makefile  README.md  api_test.c  ccos_boot_data.h  ccos_context.h  ccos_disk.c  ccos_disk.h  ccos_error.c  ccos_error.h  ccos_format.c  ccos_format.h  ccos_format_data.h  ccos_image.c  ccos_image.h  ccos_private.c  ccos_private.h  ccos_string.c  ccos_string.h  ccos_structure.c  ccos_structure.h  common.c  common.h  dumper.c  dumper.h  main.c  string_utils.c  string_utils.h  wrapper.c  wrapper.h
cmake/: FindCriterion.cmake
tests/: CMakeLists.txt  CTestLibfaketime.cmake  api_test.c  bitmap_test.c  case_insensitive_test.c  datetime_stub.c  delete_trip_test.c  format_test.c  round_trip_test.c
tests/files/bubbles/: empty.img
tests/files/floppy 360k/: empty.img
tests/files/floppy 720k/: empty.img
tool/: CMakeLists.txt  common.c  common.h  main.c  string_utils.c  string_utils.h  wrapper.c  wrapper.h
